[tool.poetry]
name = "recursive descent parser"
version = "0.1.0"
description = ""
authors = ["JohN100x1 <JohN100x1@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
