[tool.poetry]
name = "recursive descent parser"
version = "0.1.0"
description = ""
authors = ["JohN100x1 <JohN100x1@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79